# mortar

./: .dockerignore  .gitignore  .mortar_history  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
data/: metrics.json
data/FLARE/: M853A1_FLARE_1R.csv  M853A1_FLARE_2R.csv  M853A1_FLARE_3R.csv  M853A1_FLARE_4R.csv
data/HE/: M821_HE_0R.csv  M821_HE_1R.csv  M821_HE_2R.csv  M821_HE_3R.csv  M821_HE_4R.csv
data/PRACTICE/: M879_PRACTICE_0R.csv  M879_PRACTICE_1R.csv  M879_PRACTICE_2R.csv  M879_PRACTICE_3R.csv  M879_PRACTICE_4R.csv
data/SMOKE/: M819_SMOKE_1R.csv  M819_SMOKE_2R.csv  M819_SMOKE_3R.csv  M819_SMOKE_4R.csv
doc/: README.md  api.md  architecture.md  guide.md
src/: lib.rs  main.rs  pchip.rs  server.rs  server_cli.rs
src/web/: app.js  index.html  style.css
tests/: api.rs
